[POTENTIALLY DANGEROUS CHANGES HAVE BEEN MADE] - Switched the Java version from 17 to 1.8 - Switched the Spring version from 3 to 2.5.4 - Changed all the dependency versions to older versions - Changed the entire Security logic - Added Swagger and IndexController - Added some necessary config and util files NOTE: * Not all changes have been tested. Only Login, Logout and View Profile has been tested. * Need to find a way to implement SelfFilter (checkout the old Security Logic to find a way)